fix: iconifyPicker color-picker z-index problem

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -423,3 +423,7 @@ body {
 .el-select-dropdown__list {
   padding: 6px;
 }
+
+.global-iconify-color-picker {
+  z-index: 4500 !important;
+}
